--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,17 @@ captures/
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
 
+# IntelliJ - 2nd layer
+*/.idea/workspace.xml
+*/.idea/tasks.xml
+*/.idea/gradle.xml
+*/.idea/assetWizardSettings.xml
+*/.idea/dictionaries
+*/.idea/libraries
+*/.idea/caches
+*/.idea/modules.xml
+*/.idea/navEditor.xml
+
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
 #*.jks
