--- a/licenseview/src/main/AndroidManifest.xml
+++ b/licenseview/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright 2020 PC Chin.
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,8 +13,4 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
-</resources>
+<manifest package="com.pcchin.licenseview" />
