--- a/licenseview/build.gradle
+++ b/licenseview/build.gradle
@@ -14,6 +14,9 @@
  */
 
 apply plugin: 'com.android.library'
+// Publishing through GitHub
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.pcchin'
 
 android {
     compileSdkVersion 29
