--- a/licenseview/build.gradle
+++ b/licenseview/build.gradle
@@ -25,8 +25,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "1.0.1-alpha1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
