--- a/licenseview/build.gradle
+++ b/licenseview/build.gradle
@@ -25,8 +25,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 4
-        versionName "1.0.1-alpha3"
+        versionCode 5
+        versionName "1.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
