--- a/licenseview/build.gradle
+++ b/licenseview/build.gradle
@@ -21,8 +21,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 6
-        versionName "1.1.0"
+        versionCode 7
+        versionName '1.1.1'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
