--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ captures/
 */.idea/caches
 */.idea/modules.xml
 */.idea/navEditor.xml
+*/.idea/discord.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
