--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven {
             url 'https://maven.google.com'
         }
@@ -35,6 +36,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     tasks.withType(Javadoc) {
         options.addStringOption('Xdoclint:none', '-quiet')
